Changes for J2ME